update build.gradle for UNNAMED export